# progpy

./: .gitignore  LSTM_eval.py  OG_LSTM.py  README.md  best_model.keras  docs_requirements.txt  environment.yml  estimate_noise.ipynb  lstmSIM.py  newLSTM.py  output.txt  prog_model_template.py  pyproject.toml  save_json.txt  setup.py  test-EOD.ipynb  test-EODEOL.ipynb  test_EODEOL2.ipynb  test_estimate_noise.ipynb  test_estimate_noise_updated.ipynb  test_requirements.txt  tutorial.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  coverage.yml  greetings.yml  manual_release.yml  print-benchmarking.yml  python-package-manual.yml  python-package.yml  release.yml  update-cache.yml
docs/: .buildinfo  .buildinfo.bak  api_ref.html  dev_guide.html  genindex.html  glossary.html  guide.html  index.html  installing.html  npr7150.html  objects.inv  prog_algs_guide.html  prog_models_guide.html  prog_server_guide.html  py-modindex.html  releases.html  search.html  searchindex.js  troubleshooting.html
docs/.doctrees/: api_ref.doctree  dev_guide.doctree  environment.pickle  glossary.doctree  guide.doctree  index.doctree  installing.doctree  npr7150.doctree  prog_algs_guide.doctree  prog_models_guide.doctree  prog_server_guide.doctree  releases.doctree  troubleshooting.doctree
docs/.doctrees/api_ref/: LinearModel.doctree  PrognosticModel.doctree  prog_algs.doctree  prog_models.doctree  prog_server.doctree  progpy.doctree
docs/.doctrees/auto_examples/: benchmarking.doctree  custom_model.doctree  dataset.doctree  derived_params.doctree  dynamic_step_size.doctree  events.doctree  full_lstm_model.doctree  future_loading.doctree  generate_surrogate.doctree  growth.doctree  index.doctree  linear_model.doctree  lstm_model.doctree  matrix_model.doctree  model_gen.doctree  new_model.doctree  noise.doctree  param_est.doctree  (+9 more)
docs/_sources/: dev_guide.rst  dev_guide.rst.txt  glossary.rst  glossary.rst.txt  guide.rst  guide.rst.txt  index.rst  index.rst.txt  installing.rst  npr7150.rst  npr7150.rst.txt  prog_algs_guide.rst  prog_algs_guide.rst.txt  prog_models_guide.rst  prog_models_guide.rst.txt  prog_server_guide.rst  prog_server_guide.rst.txt  releases.rst  releases.rst.txt  troubleshooting.rst
docs/_static/: documentation_options.js
docs/api_ref/: LinearModel.html  PrognosticModel.html  prog_algs.html  prog_models.html  prog_server.html  progpy.html
docs/auto_examples/: benchmarking.html  custom_model.html  dataset.html  derived_params.html  dynamic_step_size.html  events.html  full_lstm_model.html  future_loading.html  generate_surrogate.html  growth.html  index.html  linear_model.html  lstm_model.html  matrix_model.html  model_gen.html  new_model.html  noise.html  param_est.html  sensitivity.html  sim.html  sim_battery_eol.html  sim_powertrain.html  sim_pump.html  sim_valve.html  state_limits.html  vectorized.html  visualize.html
examples/: 00_Intro.ipynb  01_Simulation.ipynb  02_Parameter Estimation.ipynb  02_param_est.ipynb  03_Existing Models.ipynb  03_IncludedModels.ipynb  04_New Models.ipynb  05_Data Driven.ipynb  05_Data_Driven.ipynb  06_Combining Models.ipynb  06_Combining_Models.ipynb  07_Datasets.ipynb  07_State Estimation.ipynb  07_State_Estimation.ipynb  08_Prediction.ipynb  08_State_Estimation.ipynb  09_Prediction.ipynb  09_Prognostic Example.ipynb  09_Prognostic_Example.ipynb  10_Prognostics Server.ipynb  2024PHMTutorial.ipynb  __init__.py  analysis.py  basic_example.ipynb  basic_example.py  basic_example_battery.py  benchmarking.ipynb  benchmarking.py  benchmarking_example.py  custom_model.py  dataset.ipynb  dataset.py  derived_params.py  direct_model.ipynb  discrete_state.ipynb  dynamic_step_size.ipynb  dynamic_step_size.py  ensemble.ipynb  events.ipynb  future_loading.py  (+42 more)
my_dir/lstm_hyperparam_tuning/: oracle.json
scripts/: test_copyright.py
sphinx-config/: api_ref.rst  conf.py  dev_guide.rst  glossary.rst  guide.rst  index.rst  installing.rst  npr7150.rst  prog_algs_guide.rst  prog_models_guide.rst  prog_server_guide.rst  releases.rst  troubleshooting.rst
sphinx-config/api_ref/: prog_models.rst  prog_server.rst  progpy.rst
sphinx-config/auto_examples/: benchmarking.ipynb  benchmarking.py  benchmarking_codeobj.pickle  custom_model.ipynb  custom_model_codeobj.pickle  dataset.ipynb  dataset.py  dataset_codeobj.pickle  derived_params.ipynb  derived_params.py  derived_params_codeobj.pickle  dynamic_step_size.ipynb  events.ipynb  events.py  events_codeobj.pickle  full_lstm_model.ipynb  full_lstm_model_codeobj.pickle  future_loading.ipynb  future_loading.py  future_loading.rst  future_loading_codeobj.pickle  generate_surrogate.ipynb  generate_surrogate.py  generate_surrogate.rst  generate_surrogate_codeobj.pickle  growth.ipynb  growth.py  growth.rst  growth_codeobj.pickle  linear_model.ipynb  linear_model_codeobj.pickle  lstm_model.ipynb  lstm_model.py  lstm_model.rst  lstm_model_codeobj.pickle  matrix_model.ipynb  matrix_model.rst  matrix_model_codeobj.pickle  model_gen.ipynb  model_gen_codeobj.pickle  (+33 more)
src/progpy/: ProgPyDataFrame.py  __init__.py  composite_model.py  discrete_state.py  ensemble_model.py  linear_model.py  mixture_of_experts.py  prognostics_model.py  sim_result.py
templates/: predictor_template.py  prog_model_template.py  state_estimator_template.py
tests/: __init__.py  __main__.py  benchmark.py  benchmarking.py  test_base_models.py  test_battery.py  test_calc_error.py  test_centrifugal_pump.py  test_composite.py  test_data_model.py  test_datasets.py  test_dict_like_matrix_wrapper.py  test_direct.py  test_discrete_state.py  test_ensemble.py  test_estimate_params.py  test_examples.py  test_horizon.py  test_linear_model.py  test_loading.py  test_manual.py  test_metrics.py  test_moe.py  test_pneumatic_valve.py  test_powertrain.py  test_predictors.py  test_serialization.py  test_sim_result.py  test_state_estimators.py  test_surrogates.py  test_tutorials.py  test_tutorials_part_2.py  test_tutorials_part_3.py  test_tutorials_part_4.py  test_tutorials_part_two.py  test_uav_model.py  test_uncertain_data.py  test_visualize.py
(+385 files in other folders)
