[tool.poetry]
name = "progpy"
version = "1.8.0"
description = "The 2024 NASA Software of the Year, the NASA Prognostic Package (ProgPy) is a python prognostics framework focused on building, using, and evaluating models and algorithms for prognostics (computation of remaining useful life) and health management of engineering systems, and provides a set of prognostics models for select components and prognostics algorithms developed within this framework, including uncertainty propagation."
authors = [
    "Christopher Teubert <christopher.a.teubert@nasa.gov>",
    "Katelyn Griffith <katelyn.j.griffith@nasa.gov>",
    "Matteo Corbetta",
    "Chetan Kulkarni",
    "Portia Banerjee",
    "Jason Watkins",
    "Matthew Daigle"
]
maintainers = [
    "Christopher Teubert <christopher.a.teubert@nasa.gov>",
    "Katelyn Griffith <katelyn.j.griffith@nasa.gov>"
]
license = "NASA-1.3"
readme = "README.md"
homepage = "https://nasa.github.io/progpy/"
repository = "https://github.com/nasa/progpy"
documentation = "https://nasa.github.io/progpy/"
keywords = [
    "prognostics", "diagnostics", "fault detection", "fdir", "physics modeling",
    "prognostics and health management", "PHM", "health management",
    "surrogate modeling", "model tuning", "simulation", "ivhm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
scipy = "*"
pandas = "*"                # For data downloading features
matplotlib = "*"
requests = "*"              # For data downloading features
fastdtw = "*"               # For DTW error calculation
filterpy = ">=1.4.4"
tensorflow = ">=2.18.0"     # For data-driven features
chaospy = ">=4.3.17"        # For data-driven features

[tool.poetry.extras]
test = ["notebook", "testbook", "requests"]
docs = ["sphinx", "sphinx-autobuild", "sphinx_toolbox", "sphinx_panels", "sphinx_book_theme", "rst2pdf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
